SOHO-6252 - Fixed dirty indicator was not aligning with File Upload on Safari

--- a/components/icons/_icons.scss
+++ b/components/icons/_icons.scss
@@ -493,6 +493,13 @@ svg.icon-dirty {
   transform: scaleX(-1);
 }
 
+// Safari fixes
+.is-safari {
+  .icon-dirty {
+    margin-top: 9px;
+  }
+}
+
 //RTL Styles
 html[dir='rtl'] {
   .field {
